Adding Bootstrap and JQuery

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>SOQL Parser JS</title>
 
-    <link type="text/css" rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -56,9 +55,9 @@
             <h6>Copyright&copy; 2018 - Austin Turner</h6>
         </div>
 
-        <script rel="script" src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script rel="script" src="assets/js/jquery.js"></script>
         <!--<script rel="script" src="../node_modules/popper.js/dist/popper.min.js"></script>-->
-        <script rel="script" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script rel="script" src="assets/js/bootstrap.min.js"></script>
         <script rel="script" src="dist/soql-parser.js"></script>
         <script rel="script" src="assets/js/main.js"></script>
         <!--<script>
